--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 .container{
     width: 100%;
     min-height: 100vh;
-    background: linear-gradient(135deg, #153677, #4e085f);
+    background: linear-gradient(135deg, #bed1e3, #93aeca);
     padding: 10px;
 
 }
@@ -51,12 +51,18 @@ button{
     border: none;
     outline: none;
     padding: 16px 50px;
-    background: #ff5945;
+    background: #ecaac2;
     color: #fff;
     font-size: 16px;
     cursor: pointer;
     border-radius: 40px;
 
+}
+#list-container{
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
 }
 ul li{
     list-style: none;
@@ -65,6 +71,11 @@ ul li{
     user-select: none;
     cursor: pointer;
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    
 
 }
 ul li::before{
@@ -76,8 +87,9 @@ ul li::before{
     background-image: url(images/unchecked.png);
     background-size: cover;
     background-position: center;
-    top: 12px;
+    top: 33%;
     left: 8px;
+    transform: translateY(-50%);
 
 }
 ul li.checked{
@@ -89,9 +101,10 @@ ul li.checked::before{
 
 }
 ul li span{
-    position: absolute;
+    position: relative;
     right: 0;
     top: 5px;
+    transform: translateY(-50%);
     width: 40px;
     height: 40px;
     font-size: 22px;
@@ -100,7 +113,21 @@ ul li span{
     text-align: center;
     border-radius: 50%;
 }
-ul li span:hover{
+ul li span.delete:hover{
     background: #edeef0;
 
 }
+ul li .task-datetime{
+    font-size: 0.9em;
+    color: #555;
+    margin-left: 10px;
+    font-style: italic;
+    white-space: nowrap;
+    
+    
+}
+ul li .task-text{
+    white-space: nowrap;
+}
+
+
